# arabic-whisper-transcriber

./: .gitignore  README.md  pyproject.toml  whisper_batch_transcriber.py  whisper_transcriber.py
